# docs/swagger.yaml
@@ -22,6 +22,26 @@ definitions:
       status:
         type: string
     type: object
+  web.Error:
+    properties:
+      message:
+        type: string
+    type: object
+  web.PaginatedProductResponse:
+    properties:
+      limit:
+        type: integer
+      page:
+        type: integer
+      products:
+        items:
+          $ref: '#/definitions/usecase.ProductOutputDTO'
+        type: array
+      total_count:
+        type: integer
+      total_pages:
+        type: integer
+    type: object
 host: localhost:8000
 info:
   contact: {}
@@ -30,6 +50,44 @@ info:
   version: "1.0"
 paths:
   /products:
+    get:
+      consumes:
+      - application/json
+      description: List Products
+      parameters:
+      - default: 1
+        description: page number
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: limit
+        in: query
+        name: limit
+        type: integer
+      - default: '"id"'
+        description: sort field
+        in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.PaginatedProductResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/web.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/web.Error'
+      summary: List Products
+      tags:
+      - products
     post:
       consumes:
       - application/json
